# studies

./: .gitignore  LICENSE  README.md
kpabd/l9/: pyproject.toml  tests.py
kpabd/l9/kpabd/: __init__.py  __main__.py  connection.py
kpabd/l9/kpabd-12-nhibernate/: nhibernate.sln
kpabd/l9/kpabd-12-nhibernate/Associations1ManyToOne/: Associations1ManyToOne.csproj  Osoba.cs  Osoba.hbm.xml  Program.cs  Stanowisko.cs  Stanowisko.hbm.xml  hibernate.cfg.xml
kpabd/l9/kpabd-12-nhibernate/Associations2ManyToMany/: Associations2ManyToMany.csproj  Kategoria.cs  Kategoria.hbm.xml  Ksiazka.cs  Ksiazka.hbm.xml  Program.cs  hibernate.cfg.xml
kpabd/l9/kpabd-12-nhibernate/AttributeMapping/: AttributeMapping.csproj  Osoba.cs  Program.cs  hibernate.cfg.xml  packages.config
kpabd/l9/kpabd-12-nhibernate/Collections1/: Collections1.csproj  Osoba.cs  Osoba.hbm.xml  Program.cs
kpabd/l9/kpabd-12-nhibernate/Collections2/: Collections2.csproj  Osoba.cs  Osoba.hbm.xml  Program.cs  hibernate.cfg.xml
kpabd/l9/kpabd-12-nhibernate/Collections3/: Collections3.csproj  Osoba.cs  Osoba.hbm.xml  Program.cs
kpabd/l9/kpabd-12-nhibernate/Collections4/: Collections4.csproj  Osoba.cs  Osoba.hbm.xml  Program.cs
kpabd/l9/kpabd-12-nhibernate/Collections5/: Collections5.csproj  Fotka.cs  Osoba.cs  Osoba.hbm.xml  Program.cs
kpabd/l9/kpabd-12-nhibernate/CompositeKeys1/: CompositeKeys1.csproj  Program.cs  Ulica.cs  Ulica.hbm.xml  hibernate.cfg.xml
kpabd/l9/kpabd-12-nhibernate/CompositeKeys2/: CompositeKeys2.csproj  (+4 more)
kpabd/l9/z1/: HelloWorld.py  IdentityMap.py  UsingComponents.py  UsingEnumerations.py
(+457 files in other folders)
